objects/CN_Internal_Employee__c.object
<CustomObject>
    <fields>
        <fullName>CN_Personnel_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Personnel Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Role__c</fullName>
        <label>CN Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <label>Sales Person</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Finance AR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_User_Name__c</fullName>
        <label>CN User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Internal Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Role__c</columns>
        <columns>CN_Personnel_Number__c</columns>
        <columns>CN_User_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Employees</pluralLabel>
    <recordTypes>
        <fullName>CN_Internal_Employee</fullName>
        <active>true</active>
        <label>CN Internal Employee</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>